chrome/browser/android/vr_shell/mailbox_to_surface_bridge.cc
@@ -30,9 +30,10 @@ namespace {
 
 /* clang-format off */
 const char kQuadCopyVertex[] = SHADER(
+    precision mediump float;
     attribute vec4 a_Position;
     attribute vec2 a_TexCoordinate;
-    varying vec2 v_TexCoordinate;
+    varying highp vec2 v_TexCoordinate;
     void main() {
       v_TexCoordinate = a_TexCoordinate;
       gl_Position = a_Position;
